# coursework_3

./: pyproject.toml
config/: config.py
src/: base_api.py  bdmanager.py  create_and_rec_db.py  hh_api.py  user_interaction.py  utils.py  vacancies.py
